# openclaw-chronicle-engine

./: .dockerignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
.github/workflows/: docker-backend.yml
backend/: Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
backend/tests/: contract_semantics.rs  phase2_contract_semantics.rs
backend/tests/contract_semantics/: diagnostics_auth_and_persistence.rs  distill_contracts.rs  provider_and_retrieval.rs
deploy/: Dockerfile  README.md  backend.toml.example  docker-compose.yml
deploy/memory-lancedb-pro-backend/: Dockerfile  README.md  docker-compose.yml
docs/: README.md  archive-index.md  runtime-architecture.md
docs/archive/: README.md
docs/autorecall-governance-unification-2026-03-18/: autorecall-governance-unification-2026-03-18-brainstorming.md  autorecall-governance-unification-2026-03-18-implementation-research-notes.md  autorecall-governance-unification-2026-03-18-scope-milestones.md  autorecall-governance-unification-2026-03-18-technical-documentation.md
docs/backend-admin-plane-2026-03-27/: backend-admin-plane-2026-03-27-brainstorming.md  backend-admin-plane-2026-03-27-contracts.md  backend-admin-plane-2026-03-27-implementation-research-notes.md  backend-admin-plane-2026-03-27-scope-milestones.md  backend-admin-plane-2026-03-27-technical-documentation.md
docs/backend-binary-rename-chronicle-engine-rs-2026-03-26/: backend-binary-rename-chronicle-engine-rs-2026-03-26-contract.md
docs/context-engine-split-2026-03-15/: README.md  context-engine-split-brainstorming.md  (+4 more)
src/: auto-recall-final-selection.ts  backend-tools.ts  governance-tools.ts  memory-record-types.ts  prompt-local-auto-recall-selection.ts  prompt-local-topk-setwise-selection.ts  recall-engine.ts  reflection-recall.ts  reflection-store.ts  self-improvement-files.ts  self-improvement-registration.ts  self-improvement-tools.ts  store.ts  tools.ts
test/: auto-recall-behavioral.test.mjs  backend-client-retry-idempotency.test.mjs  config-session-strategy-cutover.test.mjs  config-session-strategy-migration.test.mjs  governance-tools.test.mjs  memory-reflection.test.mjs  noise-filter-chinese.mjs  query-expander.test.mjs  remote-backend-shell-integration.test.mjs  self-improvement.test.mjs
(+275 files in other folders)
