[package]
name = "chronicle-engine-rs"
version = "1.0.0-beta.0"
edition = "2021"
authors = ["furedericca"]
license = "MIT"
description = "Remote backend for the OpenClaw Chronicle Engine memory plugin."
repository = "https://github.com/furedericca-lab/chronicle-engine"

[lib]
name = "chronicle_engine_rs"
path = "src/lib.rs"

[[bin]]
name = "chronicle-engine-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
arrow-array = "57.3.0"
arrow-schema = "57.3.0"
axum = { version = "0.8.8", features = ["macros", "json"] }
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3"
http = "1.4.0"
lancedb = "0.27.1"
parking_lot = "0.12"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
toml = "1.1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
